--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: open sans;
-  color: #10214e;
+  color: #061232;
 }
 
 article {
@@ -25,9 +25,9 @@ article {
   max-width: 25em;
   min-width: 20em;
   border-radius: 1rem;
-  background: rgb(0,239,255);
-  background: linear-gradient(0deg, rgba(0,239,255,1) 40%, #4e54c8 100%);
-  box-shadow: 0 0 20px 20px rgba(0,0,0,.1);
+  background: rgb(234, 9, 20);
+  background: linear-gradient(0deg, rgb(255, 0, 0) 40%, #c20303 100%);
+  box-shadow: 0 0 20px 20px rgba(234, 5, 5, 0.1);
   transition: .25s;
 }
 
@@ -41,7 +41,7 @@ header {
 
 h1 {
   margin: 2rem 0 1rem;
-  color: rgba(0,239,255,1);
+  color: rgb(0, 255, 255);
 }
 
 button {
@@ -53,23 +53,23 @@ button {
   padding: .25rem;
   border: none;
   border-radius: 50%;
-  background: rgba(0,239,255,1);
+  background: rgb(255, 0, 60);
   transform: scale(.8);
   transition: .25s;
 }
 button:focus {
   outline: none;
-  background: #202592;
+  background: #e40816;
 }
 button:focus svg {
-  stroke: rgba(0,239,255,1);
+  stroke: rgb(255, 0, 43);
 }
 
 svg {
   position: absolute;
   top: calc(1.25rem - 12px);
   left: calc(1.25rem - 12px);
-  stroke: #4e54c8;
+  stroke: #eb0a1d;
   transition-delay: .25s;
 }
 button svg:nth-of-type(2) {
@@ -82,8 +82,8 @@ img {
   top: 2rem;
   width: 10em;
   height: auto;
-  border: 5px solid #fff;
-  border-radius: 10em;
+  border: 3px solid #110101;
+  border-radius: 15em;
   box-shadow: 0 0 2px 2px rgba(0,0,0,.2);
   transition: .25s .15s;
 }
@@ -102,13 +102,13 @@ dl {
   margin-bottom: 0;
   padding: 5rem 0 3rem;
   text-align: center;
-  background: rgb(255,255,255);
+  background: rgb(241, 234, 234);
 }
 
 dt {
   margin-top: .25rem;
   padding-top: .25rem;
-  border-top: 1px solid rgba(0,0,0,0.3);
+  border-top: 1px solid rgba(9, 9, 9, 0.3);
   font-weight: bold;
 }
 dt:nth-of-type(1) {
@@ -141,7 +141,7 @@ article > p {
   padding: 3rem 2rem;
   border-radius: 0 0 1rem 1rem;
   text-align: center;
-  background: rgba(255,255,255, 0.5);
+  background: rgba(237, 9, 9, 0.5);
 }
 
 /* expand content */
