--- a/styles/style.css
+++ b/styles/style.css
@@ -1,173 +1,65 @@
-* {
-  box-sizing: border-box;
-}
-
-html {
-  height: 100vh;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: open sans;
-  color: #061232;
-}
-
-article {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  width: 50vw;
-  max-width: 25em;
-  min-width: 20em;
-  border-radius: 1rem;
-  background: rgb(234, 9, 20);
-  background: linear-gradient(0deg, rgb(255, 0, 0) 40%, #c20303 100%);
-  box-shadow: 0 0 20px 20px rgba(234, 5, 5, 0.1);
-  transition: .25s;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-h1 {
-  margin: 2rem 0 1rem;
-  color: rgb(0, 255, 255);
-}
-
-button {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: .25rem;
-  border: none;
+.vynil {
+  width: 25em;
+  height: 25em;
+  background-color: black;
   border-radius: 50%;
-  background: rgb(255, 0, 60);
-  transform: scale(.8);
-  transition: .25s;
-}
-button:focus {
-  outline: none;
-  background: #e40816;
-}
-button:focus svg {
-  stroke: rgb(255, 0, 43);
-}
-
-svg {
-  position: absolute;
-  top: calc(1.25rem - 12px);
-  left: calc(1.25rem - 12px);
-  stroke: #eb0a1d;
-  transition-delay: .25s;
-}
-button svg:nth-of-type(2) {
-  opacity: 0;
-  transition-delay: 0ms;
-}
-
-img {
-  position: relative;
-  top: 2rem;
-  width: 10em;
-  height: auto;
-  border: 3px solid #110101;
-  border-radius: 15em;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,.2);
-  transition: .25s .15s;
-}
-
-dl {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
-    "html-dd css-dd js-dd"
-    "html-dt css-dt js-dt"
-    ;
   justify-items: center;
-  align-items: start;
-  width: 100%;
-  margin-top: -3rem;
-  margin-bottom: 0;
-  padding: 5rem 0 3rem;
-  text-align: center;
-  background: rgb(241, 234, 234);
+  align-items: center;
+
+  background-image:
+		repeating-conic-gradient(
+			transparent,
+			rgba(0, 0, 0, 0.89),
+			transparent 180deg
+		),
+    repeating-radial-gradient(
+			black 0 1%,
+			#222 1% 2%,
+			black 2%
+		);
+    
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    
+    animation:spin 3s infinite linear;
+    z-index: 1;
+    position: relative;
+    
 }
 
-dt {
-  margin-top: .25rem;
-  padding-top: .25rem;
-  border-top: 1px solid rgba(9, 9, 9, 0.3);
-  font-weight: bold;
-}
-dt:nth-of-type(1) {
-  grid-area: html-dt;
-}
-dt:nth-of-type(2) {
-  grid-area: css-dt;
-  transform: translateY(1rem);
-}
-dt:nth-of-type(3) {
-  grid-area: js-dt;
+.sticker {
+  width: 11em;
+  height: 11em;
+  background-color: purple;
+  border-radius: 50%;
+  object-fit: cover;
+  
 }
 
-dd {
+@keyframes spin {
+	to {
+		rotate:1turn;
+	}
+}
+
+.cover{
+  width: 30em;
+  height: 30em;
+  background-color: rgb(207, 3, 3);
+  border-radius: 3%;
+
+  display: grid;
+  justify-items:center;
+  align-items: center;
+  z-index: 10;
+  position: relative;
+}
+
+figure {
   margin: 0;
-  padding-left: .3rem;
-  transition: .25s .3s;
-}
-dd:nth-of-type(2){  
-  transform: translateY(1rem);
-}
-
-p { 
-  margin: 0;
-}
-
-article > p {
-  width: 100%;
-  margin-top: 0;
-  padding: 3rem 2rem;
-  border-radius: 0 0 1rem 1rem;
-  text-align: center;
-  background: rgba(237, 9, 9, 0.5);
-}
-
-/* expand content */
-body.expand {
-  font-size: 1.15em;
-}
-
-body.expand article {
-  width: 60vw;
-  max-width: 60vw;
-}
-
-body.expand button svg:first-of-type {
-  opacity: 0;
-  transition-delay: 0ms;
-}
-
-body.expand button svg:nth-of-type(2) {
-  opacity: 1;
-  transition-delay: .25s;
-}
-
-body.expand dd {
-  font-size: 1.75em;
-}
-
-body.expand img {
-  width: 15em;
+  margin-top: 2em;
+  z-index: 10;
+  position: relative;
 }
